Modify: 1. add API txByDay 2. add API blocksByDay 3. add API txCountByTime 4. add API txByTime
Fixed:
1. pgservice.js
