# app/explorer/rest/dbroutes.js
@@ -218,6 +218,31 @@ const dbroutes = (app, persist) => {
     }
   });
 
+  /***
+  Transactions per day(s) with day interval
+  GET /api/txByDay
+  curl -i 'http://<host>:<port>/api/txByDay/<channel>/<days>'
+  Response:
+  {"rows":[{"datetime":"2018-03-12T00:00:00.000Z","count":"0"},
+  {"datetime":"2018-03-13T00:00:00.000Z","count":"0"}]}
+  */
+
+  app.get("/api/txByDay/:channel/:days", function (req, res) {
+    let channelName = req.params.channel;
+    let days = parseInt(req.params.days);
+
+    if (channelName && !isNaN(days)) {
+      statusMetrics.getTxByDay(channelName, days).then(rows => {
+        if (rows) {
+          return res.send({ status: 200, rows });
+        }
+        return requtil.notFound(req, res);
+      });
+    } else {
+      return requtil.invalidRequest(req, res);
+    }
+  });
+
   // BLOCK METRICS
 
   /***
@@ -268,6 +293,71 @@ const dbroutes = (app, persist) => {
     } else {
       return requtil.invalidRequest(req, res);
     }
+  });
+
+  /***
+  Blocks per day(s) with day interval
+  GET /api/blocksByDay
+  curl -i 'http://<host>:<port>/api/blocksByDay/<channel>/<days>'
+  Response:
+  {"rows":[{"datetime":"2018-03-13T00:00:00.000Z","count":"0"}]}
+
+  */
+
+  app.get("/api/blocksByDay/:channel/:days", function (req, res) {
+    let channelName = req.params.channel;
+    let days = parseInt(req.params.days);
+
+    if (channelName && !isNaN(days)) {
+      statusMetrics.getBlocksByDay(channelName, days).then(rows => {
+        if (rows) {
+          return res.send({ status: 200, rows });
+        }
+        return requtil.notFound(req, res);
+      });
+    } else {
+      return requtil.invalidRequest(req, res);
+    }
+  });
+
+  app.get('/api/blocksCountByTime/:channel/:start/:end', function (req, res) {
+    // Check params
+    if (!req.params.channel || isNaN(req.params.start) || isNaN(req.params.end)) {
+      return requtil.invalidRequest(req, res);
+    }
+
+    const channelName = req.params.channel;
+    const start = req.params.start;
+    const end = req.params.end;
+
+    let count;
+    statusMetrics.getBlockCountByTime(channelName, start, end).then(rows => {
+      if (rows) {
+        count = rows;
+        return res.send({ status: 200, count });
+      }
+      return requtil.notFound(req, res);
+    });
+  });
+
+  app.get('/api/txCountByTime/:channel/:start/:end', function (req, res) {
+    // Check params
+    if (!req.params.channel || isNaN(req.params.start) || isNaN(req.params.end)) {
+      return requtil.invalidRequest(req, res);
+    }
+
+    const channelName = req.params.channel;
+    const start = req.params.start;
+    const end = req.params.end;
+
+    let count;
+    statusMetrics.getTxCountByTimePeriod(channelName, start, end).then(rows => {
+      if (rows) {
+        count = rows;
+        return res.send({ status: 200, count });
+      }
+      return requtil.notFound(req, res);
+    });
   });
 
   /**
@@ -337,6 +427,98 @@ const dbroutes = (app, persist) => {
       return requtil.notFound(req, res);
     });
   });
+
+  /**
+
+     Get tx by time
+     GET /api/txByTime
+     curl -i 'http://<host>:<port>/api/blocksByTime/<channel>/<start>/<end>/<pagesize>/<pagenum>/<objectName>/<chaincodeName>'
+     'objectName' is option.
+     'chaincodeName' is option.
+     Response:
+       {
+        "status": 200,
+        "genesisBlock": [
+            {
+                "blocknum": 0,
+                "txcount": 1,
+                "createdt": "2018-09-13T09:12:29.000Z",
+                "blockhash": "8314f3ecada68a21645fdbf38f02ede5660521aba993f85660ecf3e4be7f517e"
+            }
+        ],
+        "count": [
+            {
+                "count": "5"
+            }
+        ],
+        "rows": [
+            {
+                "blockid": 6,
+                "txhash": "753381a30bf65569f8d2348218fe3b6a9964993a3d787c04e10bc0861f69eada",
+                "createdt": "2018-09-14T02:29:55.000Z",
+                "chaincodename": "fingerprint",
+                "genesis_block_hash": "8314f3ecada68a21645fdbf38f02ede5660521aba993f85660ecf3e4be7f517e",
+                "metadata": {
+                    "userId": "mrds-001-ea16bb801b674166bcf05aada9face2a",
+                    "accessKey": "7Qepmk01G3A9I_1n275M",
+                    "objectName": "testfile.txt",
+                    "objectVersionId": "G0011165D5E9C242FFFF8011003BA483",
+                    "fingerprint": "HzivVOBsbm9tvzm6LAUrlS3qXd20hxEns0Y53esRvb4=",
+                    "md5sum": "eOuX5kJFLrMK6l925Sp2Aw==",
+                    "lastModified": 1536892191000
+                }
+            }
+        ]
+      }
+  */
+
+    app.get('/api/txByTime/:channel/:start/:end/:pagesize/:pagenum/:objectName?/:chaincodeName?', function (req, res) {
+        // Check params
+        if (!req.params.channel || isNaN(req.params.start) || isNaN(req.params.end)
+            || isNaN(req.params.pagesize) || isNaN(req.params.pagenum)) {
+            return requtil.invalidRequest(req, res);
+        }
+
+        const channelName = req.params.channel;
+        const start = parseInt(req.params.start);
+        const end = parseInt(req.params.end);
+        const pagesize = parseInt(req.params.pagesize);
+        const pagenum = parseInt(req.params.pagenum);
+        const objectName = req.params.objectName; // option param.
+        let chaincodeName = 'fingerprint'; // option param. 'fingerprint' by default.
+
+        if (req.params.chaincodeName) {
+            chaincodeName = req.params.chaincodeName;
+        }
+
+        // Check params
+        if (start <= 0 || end <= 0 || pagesize <= 0 || pagenum <= 0) {
+            return requtil.invalidRequest(req, res);
+        }
+
+        let genesisBlock;
+        statusMetrics.getGenesisBlockFromDB(channelName).then((rows) => {
+            if (rows) {
+                genesisBlock = rows;
+            }
+        });
+
+        let count;
+        statusMetrics.getTxCountByTime(channelName, start, end, chaincodeName, objectName).then((rows) => {
+            if (rows) {
+                count = rows;
+            }
+        });
+
+        statusMetrics.getTxByTime(channelName, start, end, pagesize, pagenum, objectName, chaincodeName).then((rows) => {
+            if (rows) {
+                return res.send({
+                    status: 200, genesisBlock, count, rows,
+                });
+            }
+            return requtil.notFound(req, res);
+        });
+    });
 
   /***
    Transactions by Organization(s)
